Use SCSS variables for z-index and fix duplicate CSS properties

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -79,7 +79,7 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
-    z-index: 2001;
+    z-index: $z-index-header;
     margin-bottom: 5px;
 
     &.header-shadow {
